# logripper

./: .env.example  .gitattributes  .gitignore  .mcp.json  Cargo.toml  LICENSE  README.md  buf.gen.yaml  buf.yaml  build.ps1  runall.ps1  rust-coverage.lcov  start-qsoripper.ps1  stop-qsoripper.ps1
.github/: copilot-instructions.md
.github/agents/: code-reviewer.agent.md  implementer.agent.md  investigator.agent.md  planner.agent.md  security-auditor.agent.md
.github/hooks/: copilot-policy.json
.github/instructions/: architecture.instructions.md  integrations.instructions.md  performance.instructions.md  rust.instructions.md  security.instructions.md  ui-ux.instructions.md
.github/prompts/: debug-investigation.prompt.md  feature-implementation.prompt.md  qrz-integration.prompt.md
.github/workflows/: copilot-setup-steps.yml  dotnet-quality.yml  rust-quality.yml
coverage/05db5231-3b54-48b1-93c8-43a5e3d30608/: coverage.cobertura.xml
coverage/0c3139b0-3aee-4392-9b57-87572697c172/: coverage.cobertura.xml
coverage/53c837f6-e198-4fe6-8a70-33d15c8c122c/: coverage.cobertura.xml
coverage/62c4b8bf-826e-4691-8860-8d56ef977c1e/: coverage.cobertura.xml
coverage/7704fe29-c62b-4ee8-bba9-777776d7e611/: coverage.cobertura.xml
coverage/94b88f4c-2140-43bb-8b75-8e11e3bc9ea5/: coverage.cobertura.xml
crates/logripper-core/: build.rs
data/: qsoripper-shared.db-shm  qsoripper-shared.db-wal
docs/: keyboard-shortcuts.md
docs/api/: client-integration.md  (+2 more)
experiments/cw-decoder/: .gitignore  Cargo.toml  README.md
experiments/cw-decoder/gui/: App.axaml  App.axaml.cs  CwDecoderGui.csproj  Program.cs  app.manifest
experiments/cw-decoder/gui/Models/: BaselineDecoderConfig.cs  BenchScenarioResult.cs  CandidateLabel.cs  DecoderConfig.cs  DecoderEvent.cs  HarvestResult.cs  LabelEvaluationResult.cs  PlaybackEvent.cs  SelectableLabelFile.cs  SignalProfile.cs  StrategyOption.cs  TranscriptCell.cs
experiments/cw-decoder/gui/Services/: AudioPlaybackProcess.cs  CwBenchRunner.cs  CwDecoderProcess.cs
experiments/cw-decoder/gui/ViewModels/: MainWindowViewModel.Bench.cs  MainWindowViewModel.Visualizer.cs  MainWindowViewModel.cs  VizBarMonitor.cs
experiments/cw-decoder/gui/Views/: Converters.cs  MainWindow.axaml  MainWindow.axaml.cs  PlaybackSignalView.cs  SignalMeter.cs  SignalProfileEditor.cs  VisualizerCanvas.cs  WpmSparkline.cs
experiments/cw-decoder/scripts/: bench-30wpm.ps1  gen-30wpm-variants.ps1  stress-eval.ps1  stress-gen.ps1
experiments/cw-decoder/src/: append_decode.rs  audio.rs  bench_latency.rs  decoder.rs  ditdah_streaming.rs  envelope_decoder.rs  harvest.rs  json.rs  lib.rs  log_capture.rs  main.rs  preprocess.rs  preview.rs  region_stream.rs  streaming.rs  streaming_v2.rs  tui.rs
scripts/: bench-live-capture-suite.ps1  bench-v3-clean.ps1  drive-avalonia.ps1  summarize-cw-diag.ps1
tests/: Build.Tests.ps1
(+381 files in other folders)
