[package]
name = "cw-decoder-poc"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "cw-decoder"
path = "src/main.rs"

[dependencies]
ditdah = { path = "../../../ditdah" }
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

# Audio decode (mp3/wav/etc)
symphonia = { version = "0.5", features = ["mp3", "wav", "isomp4", "aac"] }

# Live audio capture
cpal = "0.15"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Concurrency
parking_lot = "0.12"

# Sample utilities
hound = "3.5"

[profile.release]
opt-level = 3
lto = "thin"

# Stand-alone workspace so we don't pollute the main qsoripper Rust workspace.
[workspace]
