[package]
name = "cw-decoder-poc"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "cw-decoder"
path = "src/main.rs"

[[bin]]
name = "eval"
path = "src/bin/eval.rs"

[lib]
name = "cw_decoder_poc"
path = "src/lib.rs"

[dependencies]
ditdah = { path = "vendor/ditdah" }
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

# Signal processing (re-used in our streaming decoder; same versions as ditdah)
rubato = "0.16"
rustfft = "6.4"

# Audio decode (mp3/wav/etc)
symphonia = { version = "0.5", features = ["mp3", "wav", "isomp4", "aac"] }

# Live audio capture
cpal = "0.15"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Concurrency
parking_lot = "0.12"
rayon = "1.10"

# Sample utilities
hound = "3.5"

# JSON event output for the Avalonia GUI bridge
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"

# Stand-alone workspace so we don't pollute the main qsoripper Rust workspace.
[workspace]
